--- a/app/src/main/res/drawable/bg_radio_button_selector.xml
+++ b/app/src/main/res/drawable/bg_radio_button_selector.xml
@@ -3,16 +3,15 @@
     <!-- 선택된 상태 -->
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#FF9800" /> <!-- 오렌지 -->
+            <solid android:color="@color/primary" /> <!-- 진한 주황색 -->
             <corners android:radius="20dp" />
-            <stroke android:width="0.4dp" android:color="#FFA94D" />
         </shape>
     </item>
 
     <!-- 기본 상태 -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" /> <!-- 연한 오렌지 -->
+            <solid android:color="#FFFFFF" /> <!-- 흰색 -->
             <corners android:radius="20dp" />
             <stroke android:width="0.4dp" android:color="#FFA94D" />
         </shape>
