--- a/app/src/main/res/layout/toolbar_basic.xml
+++ b/app/src/main/res/layout/toolbar_basic.xml
@@ -9,14 +9,13 @@
     app:contentInsetEnd="0dp"
     app:contentInsetStart="0dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:paddingStart="8dp"
         android:paddingEnd="8dp">
 
@@ -25,6 +24,8 @@
             android:id="@+id/back_button_card"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
             android:outlineAmbientShadowColor="@color/transparent"
             android:outlineSpotShadowColor="@color/transparent"
             app:cardBackgroundColor="@color/transparent"
@@ -48,9 +49,9 @@
         <!-- 화면 이름 -->
         <TextView
             android:id="@+id/toolbar_title"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_centerInParent="true"
             android:fontFamily="@font/notosans_regular"
             android:gravity="center"
             android:includeFontPadding="false"
@@ -59,13 +60,12 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <Space
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
         <LinearLayout
             android:id="@+id/edit_delete_container"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/edit_button_card"
@@ -116,5 +116,5 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 </androidx.appcompat.widget.Toolbar>
