--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,4 +11,60 @@
         <item>컵</item>
         <item>직접 입력</item>
     </string-array>
+
+    <string-array name="recipe_categories">
+        <item>한식</item>
+        <item>양식</item>
+        <item>중식</item>
+        <item>일식</item>
+        <item>동남아식</item>
+        <item>남미식</item>
+        <item>분식</item>
+        <item>밑반찬</item>
+        <item>국물요리</item>
+        <item>밥</item>
+        <item>면</item>
+        <item>일품</item>
+        <item>디저트</item>
+        <item>음료</item>
+        <item>채소요리</item>
+        <item>간편식</item>
+        <item>키즈</item>
+        <item>캠핑</item>
+        <item>제철요리</item>
+        <item>초스피드</item>
+        <item>손님접대</item>
+        <item>명절</item>
+    </string-array>
+
+    <string-array name="categories_by_type">
+        <item>한식</item>
+        <item>양식</item>
+        <item>중식</item>
+        <item>일식</item>
+        <item>동남아식</item>
+        <item>남미식</item>
+        <item>분식</item>
+    </string-array>
+
+    <string-array name="categories_by_dish">
+        <item>밑반찬</item>
+        <item>국물요리</item>
+        <item>밥</item>
+        <item>면</item>
+        <item>일품</item>
+        <item>디저트</item>
+        <item>음료</item>
+        <item>채소요리</item>
+        <item>간편식</item>
+        <item>키즈</item>
+    </string-array>
+
+    <string-array name="categories_by_theme">
+        <item>캠핑</item>
+        <item>제철요리</item>
+        <item>초스피드</item>
+        <item>손님접대</item>
+        <item>명절</item>
+    </string-array>
 </resources>
