--- a/app/src/main/res/layout/activity_recipe_read_finish.xml
+++ b/app/src/main/res/layout/activity_recipe_read_finish.xml
@@ -19,7 +19,7 @@
         android:id="@+id/v_image"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@drawable/bg_gradation"
+        android:background="@drawable/gradient_overlay_cream"
         android:layout_alignBottom="@id/iv_recipe_thumbnail"/>
 
     <LinearLayout
@@ -98,7 +98,7 @@
                     android:layout_marginEnd="2dp"
                     android:layout_weight="1"
                     android:background="@drawable/bg_gray_rounded"
-                    android:drawableStart="@drawable/ic_bookmark_outline_figma"
+                    android:drawableStart="@drawable/ic_bookmark"
                     android:drawablePadding="-12dp"
                     android:paddingStart="20dp"
                     android:text="북마크에 추가"
