--- a/app/src/main/res/layout/item_cook_tip_content_block.xml
+++ b/app/src/main/res/layout/item_cook_tip_content_block.xml
@@ -25,7 +25,7 @@
             android:id="@+id/iv_add_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_add_photo"
+            android:src="@drawable/ic_camera_add"
             android:layout_gravity="center"
             android:visibility="visible"/>
     </FrameLayout>
