--- a/app/src/main/res/drawable/ic_profile_placeholder.xml
+++ b/app/src/main/res/drawable/ic_profile_placeholder.xml
@@ -1,11 +1,29 @@
-<!-- res/drawable/ic_profile_placeholder.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0"
-    android:tint="?attr/colorControlNormal">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
+        android:pathData="M17,8.5C17,5.739 14.761,3.5 12,3.5C9.239,3.5 7,5.739 7,8.5C7,11.261 9.239,13.5 12,13.5C14.761,13.5 17,11.261 17,8.5Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="1.5"
+        android:fillColor="#404040"
+        android:strokeColor="#404040"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M19,20.5C19,16.634 15.866,13.5 12,13.5C8.134,13.5 5,16.634 5,20.5"
+        android:fillColor="#404040"/>
+    <path
+        android:pathData="M19,20.5C19,16.634 15.866,13.5 12,13.5C8.134,13.5 5,16.634 5,20.5"
+        android:strokeLineJoin="round"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#404040"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M5,21H19"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#404040"
+        android:strokeLineCap="round"/>
 </vector>
