--- a/app/src/main/res/drawable/ic_reply_arrow.xml
+++ b/app/src/main/res/drawable/ic_reply_arrow.xml
@@ -2,23 +2,20 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="24">
 
-    <!-- 세로 + 짧은 가로선 -->
     <path
-        android:strokeColor="@android:color/black"
+        android:strokeColor="#404040"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
         android:fillColor="@android:color/transparent"
         android:pathData="M4,4 v8 h8"/>
 
-    <!-- 화살표 (삼각형, 작게 조정 + 모서리 둥글게) -->
     <path
-        android:strokeColor="@android:color/black"
+        android:strokeColor="#404040"
         android:strokeWidth="2"
         android:strokeLineJoin="round"
-        android:fillColor="@android:color/black"
+        android:fillColor="#404040"
         android:pathData="M12,9 L16,12 L12,15 Z"/>
 </vector>
