--- a/app/src/main/res/drawable/ic_stat_name.xml
+++ b/app/src/main/res/drawable/ic_stat_name.xml
@@ -1,10 +1,44 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#FFFFFF">
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="26dp"
+    android:height="28dp"
+    android:viewportWidth="26"
+    android:viewportHeight="28">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.9,2 2,2zM18,16v-5c0,-3.07 -1.63,-5.64 -4.5,-6.32L13.5,4c0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.5,0.67 -1.5,1.5v0.68C7.63,5.36 6,7.92 6,11v5l-2,2v1h16v-1l-2,-2z"/>
+        android:pathData="M7.949,23.1C8.528,25.343 10.571,27 13.001,27C15.432,27 17.475,25.343 18.054,23.1H7.949Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2"
+        android:strokeLineCap="round">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:startX="13.001"
+                android:startY="23.1"
+                android:endX="13.001"
+                android:endY="27"
+                android:type="linear">
+                <item android:offset="0" android:color="#FFE2D4C9"/>
+                <item android:offset="0.7" android:color="#FFFFF9F4"/>
+                <item android:offset="1" android:color="#FFFFF9F4"/>
+            </gradient>
+        </aapt:attr>
+        <aapt:attr name="android:strokeColor">
+            <gradient
+                android:startX="13.001"
+                android:startY="23.1"
+                android:endX="13.001"
+                android:endY="27"
+                android:type="linear">
+                <item android:offset="0" android:color="#FFE2D4C9"/>
+                <item android:offset="0.7" android:color="#FFFFF9F4"/>
+                <item android:offset="1" android:color="#FFFFF9F4"/>
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:pathData="M1.039,17.601C0.771,19.413 1.971,20.671 3.442,21.298C9.079,23.701 16.924,23.701 22.561,21.298C24.031,20.671 25.232,19.413 24.963,17.601C24.799,16.487 23.982,15.559 23.377,14.654C22.585,13.453 22.507,12.143 22.506,10.75C22.506,5.365 18.251,1 13.001,1C7.752,1 3.496,5.365 3.496,10.75C3.496,12.143 3.417,13.453 2.625,14.654C2.021,15.559 1.204,16.487 1.039,17.601Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2"
+        android:fillColor="#FFF9F4"
+        android:strokeColor="#FFF9F4"
+        android:strokeLineCap="round"/>
 </vector>
