--- a/app/src/main/res/layout/backup_cook_card_03.xml
+++ b/app/src/main/res/layout/backup_cook_card_03.xml
@@ -36,7 +36,7 @@
             android:layout_height="32dp"
             android:layout_margin="8dp"
             android:padding="6dp"
-            android:src="@drawable/ic_bookmark_outline_figma"
+            android:src="@drawable/ic_bookmark"
             android:background="@drawable/bg_bookmark_shape"
             app:tint="@android:color/black"
             android:contentDescription="북마크"
