--- a/app/src/main/res/layout/cook_card_03.xml
+++ b/app/src/main/res/layout/cook_card_03.xml
@@ -38,7 +38,7 @@
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_bookmark_outline_figma"
+            android:src="@drawable/ic_bookmark"
             android:background="@drawable/bg_bookmark_shape"
             android:padding="8dp"
             app:tint="@android:color/black"
@@ -140,7 +140,7 @@
                 android:id="@+id/difficulty_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:drawableStartCompat="@drawable/ic_difficulty"
+                app:drawableStartCompat="@drawable/ic_fire"
                 android:text="난이도"
                 android:drawablePadding="4dp"
                 android:textSize="12sp"
