--- a/app/src/main/res/layout/item_cook_tip_detail_text.xml
+++ b/app/src/main/res/layout/item_cook_tip_detail_text.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="16sp"
-    android:textColor="@color/black"
+    android:textColor="@color/text_primary"
+    android:fontFamily="@font/notosans_medium"
+    android:includeFontPadding="false"
     android:lineSpacingExtra="4dp"
     android:paddingVertical="8dp"/>
