--- a/app/src/main/res/layout/item_ingredient_display.xml
+++ b/app/src/main/res/layout/item_ingredient_display.xml
@@ -10,7 +10,9 @@
         android:id="@+id/ingredient_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#4A4A4A"
+        android:fontFamily="@font/notosans_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/text_sub"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +23,9 @@
         android:id="@+id/ingredient_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#4A4A4A"
+        android:fontFamily="@font/notosans_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/text_sub"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +40,7 @@
         android:layout_marginEnd="8dp"
         android:maxLines="1"
         android:text="······························································································································································"
-        android:textColor="#CCCCCC"
+        android:textColor="@color/text_hint"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ingredient_amount"
