--- a/app/src/main/res/layout/item_seasonal_ingredient.xml
+++ b/app/src/main/res/layout/item_seasonal_ingredient.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:layout_marginEnd="12dp"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_ingredient_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/iv_ingredient_image"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/testimg1" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_ingredient_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="15dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/notosans_medium"
+        android:includeFontPadding="false"
         android:text="재료 이름"
-        android:layout_marginTop="8dp"/>
+        android:textColor="@color/text_primary"
+        android:textSize="14dp" />
 </LinearLayout>
