--- a/app/src/main/res/layout/item_tool_display.xml
+++ b/app/src/main/res/layout/item_tool_display.xml
@@ -11,7 +11,9 @@
         android:id="@+id/tool_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#4A4A4A"
+        android:fontFamily="@font/notosans_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/text_sub"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +28,7 @@
         android:layout_marginEnd="8dp"
         android:maxLines="1"
         android:text="······························································································································································"
-        android:textColor="#CCCCCC"
+        android:textColor="@color/text_hint"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
