--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -36,7 +36,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/text_primary</item>
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">4dp</item>
     </style>
@@ -79,9 +79,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">12dp</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textColor">#333333</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:fontFamily">@font/notosans_bold</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CookWriteEditsText" parent="Widget.AppCompat.EditText">
@@ -113,7 +114,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="chipBackgroundColor">@color/search_color</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/text_primary</item>
         <item name="closeIconTint">@color/darker_gray</item>
         <item name="chipCornerRadius">20dp</item>
         <item name="android:checkable">false</item>
@@ -127,7 +128,9 @@
         <item name="android:gravity">center</item> <!-- 텍스트 중앙 정렬 -->
         <item name="android:paddingHorizontal">12dp</item> <!-- 좌우 패딩 -->
         <item name="android:background">@drawable/bg_filter_button_normal</item>
-        <item name="android:textColor">@color/darker_gray</item>
+        <item name="android:textColor">@color/text_sub</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:fontFamily">@font/notosans_medium</item>
         <item name="android:textSize">13sp</item>
         <item name="android:drawablePadding">4dp</item>
     </style>
@@ -137,9 +140,10 @@
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_marginTop">24dp</item>
     <item name="android:layout_marginBottom">8dp</item>
-    <item name="android:textColor">@color/black</item>
+    <item name="android:textColor">@color/text_primary</item>
+    <item name="android:includeFontPadding">false</item>
+    <item name="android:fontFamily">@font/notosans_bold</item>
     <item name="android:textSize">16sp</item>
-    <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CustomFilterChip">
