병합 버그 수정

--- a/app/src/main/res/layout/item_author_info.xml
+++ b/app/src/main/res/layout/item_author_info.xml
@@ -16,7 +16,7 @@
         app:strokeColor="@color/primary_divider"
         app:strokeWidth="1dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_author_profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
