--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -470,7 +470,7 @@
                                 android:fontFamily="@font/notosans_medium"
                                 android:gravity="center"
                                 android:includeFontPadding="false"
-                                android:text="최근 본"
+                                android:text="최근 본 레시피"
                                 android:textColor="@color/text_primary"
                                 android:textSize="12sp" />
                         </LinearLayout>
